Change in wording

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE HTML>
-<!--
-	Greatness by FreeHTML5.co
-	Twitter: http://twitter.com/fh5co
-	URL: http://FreeHTML5.co
--->
+
 <html>
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ACCESS2SPACE - Simple and convenient access to space.</title>
+	<title>ACCESS2SPACE - Simple, convenient and quality assured access to space.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -213,7 +209,7 @@
 					</div>
 				</div>
 			</div>
-					<p>We understand that successfully executing a space mission is dufficult and resource draining. 
+					<p>We understand that successfully executing a space mission is difficult and resource draining. 
 					 - we're here to help and make space simple for you! </p>
 					 <p>We're the only partner you'll need to execute your mission.</p>
 					<p><a href="contact.html" class="btn btn-primary btn-lg">Give us a call</a></p>
@@ -353,7 +349,7 @@
 	<div class="gtco-container">
 		<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 					<h2>Why Choose Us</h2>
-					<p>We work with our customers as partners for their mission, and leverage our partner's and suppliers' expertise
+					<p>We work with our customers as partners for their mission, and leverage our suppliers' expertise
 					to provide the most convenient and bespoke service possible. Furthermore, we are more flexible than other 
 					similar service providers as we are:</p>
 					
@@ -384,7 +380,7 @@
 					</div>
 				</div>
 			</div>
-				<h3>We help realise the most exciting innovations in space - simply, conveniently and hassle-free.</h3>
+				<h3>We help realise the most exciting innovations in space - simply, conveniently and with quality assurance.</h3>
 				<p><a href="contact.html" class="btn btn-primary btn-lg">Contact us now</a></p>
 		</div>
 	</div>
