--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>ACCESS2SPACE - About Us</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+	<meta name="description" content="Enabling innovation by providing the most simple, convenient and quality assured access to space." />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
@@ -118,9 +118,11 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 					<h4>Access2Space is the trading name of 'Space Platform Technologies Ltd.'.</h4>
-					<p>The company was founded in end of 2017 on the belief that progress can only happen by
-					lowering barriers to entry for getting to space, so that businesses and communities relying on space
-					can accelerate their own development, and non-space based businesses can also get involved.</p>
+					<p>The company was founded on the belief that progress can only happen by lowering barriers to entry 
+					in space, so that businesses and organisations relying on space can accelerate their progress and innovate faster. 
+					Easier access to space will also enable better life on Earth for all.</p>
+					<p>Our aim is to enable the world to easily access space to be able to fully benefit from the many possibilities it offers
+					for the future of Earth.</p>
 				</div>
 			</div>
 		</div>
