Image name changes

--- a/services.html
+++ b/services.html
@@ -319,7 +319,7 @@
 				</div>
 
 				<div class="col-md-6">
-					<div class="gtco-video gtco-bg" style="background-image: url(images/NASA_sat.jpg); ">
+					<div class="gtco-video gtco-bg" style="background-image: url(images/NASAsat.jpg); ">
 						<div class="overlay"></div>
 					</div>
 				</div>
